# py-sar-3d

./: .gitignore  graph.dot  pyproject.toml  test.dot
examples/: demo_pointTarget.py  jax_exportGraph.py  jax_utils.py  sar.py  test_einsum.py  test_jaxWeirdIssue.py  test_mapReduce2D.py  test_mapReduceComp.py  test_mapReduce_opt2D.py
src/pysar3d/: __init__.py
test_map_reduce/: demo_map_reduce.py  jax_map_reduce.py  jax_map_reduce_indexing.py  jax_map_reduce_tiled.py  jax_utils.py  test_map_reduce.py  test_map_reduce_block.py  test_map_reduce_indexing.py  test_multiDimSum.py  torch_map_reduce.py
test_map_reduce/old/: test_allDimsSum.py  test_generalMapReduce.py  test_jaxWeirdIssue.py  test_mapReduce2D.py  test_mapReduceComp.py  test_mapReduce_mixed.py  test_mapReduce_opt2D.py  test_mixed_32.py  test_multiDimSum.py  test_multiDimSum_flipped.py  test_singlePoint_reduce.py
