[project]
name = "pysar3d"
version = "0.1.0"
description = "Library for reconstruction of 3D SAR images from measurement or simulation data."
readme = "README.md"
authors = [
    { name = "Matthew Dvorsky", email = "matthew.ryan.dvorsky@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "jax>=0.9.0",
    "numpy>=2.4.1",
    "torch>=2.10.0",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
]
